--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
